--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,8 +4,7 @@ security:
     App\Entity\DuckDuck:
       # bcrypt or sodium are recommended
       # sodium is more secure, but requires PHP 7.2 or the Sodium extension
-      algorithm: bcrypt
-      cost: 12
+      algorithm: 'auto'
   # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
   providers:
 
@@ -43,5 +42,5 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-  # - { path: ^/admin, roles: ROLE_ADMIN }
+   - { path: ^/duckduck$, roles: ROLE_ADMIN }
   # - { path: ^/profile, roles: ROLE_USER }
