--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,4 +43,4 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
    - { path: ^/duckduck/$, roles: ROLE_ADMIN }
-  # - { path: ^/profile, roles: ROLE_USER }
+   - { path: ^/quack/new$, roles: ROLE_USER }
